<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/accountActivity"
    tools:context="com.ambulance.rider.AccountActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/loginLayout"
        android:layout_above="@id/seperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000"
            android:text="@string/login_here" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginBottom="16dp"
            android:text="@string/use_your_username_and_password_to_login"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailId"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/login_now"
            android:textColor="#fff"
            android:background="@color/colorAccent"
            android:drawableRight="@mipmap/ic_arrow_forward"
            android:drawableEnd="@mipmap/ic_arrow_forward" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/seperator"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true"
        android:background="#000"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegisterDialog"
        android:layout_below="@id/seperator"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:drawableLeft="@mipmap/ic_account_circle"
        android:text="@string/register"
        android:drawableStart="@mipmap/ic_account_circle" />

</RelativeLayout>
